feat: add config to toggle physics events & add folia version (#593)