@@ -15,7 +15,7 @@ public class LegacySpigotCommandSenderContainer
     }
 
     public void sendMessage(String message) {
-        if (message.trim().isEmpty()
+        if (message.isBlank()
             || message.equals(Lang.getPositivePrefix())
             || message.equals(Lang.getNegativePrefix())) return;
         sender.sendMessage(message);
